# MultiAffiliateTGBot

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_v3.1.md  Dockerfile  Makefile  README.md  README.md.bak  README_ML_FEATURES.md  README_PRICE_MONITOR.md  analytics.py  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  ml_recommender.py  recommendation_engine.py
app/services/: __init__.py  ab_testing.py  analytics_dashboard.py  cache.py  commission_tracker.py  database.py  deeplink.py  exporter.py  formatter.py  fraud_detector.py  notification_engine.py  price_monitor.py  rate_limiter.py
tests/: conftest.py  test_ab_testing.py  test_analytics.py  test_analytics_dashboard.py  test_bot.py  test_cache.py  test_commission_tracker.py  test_config.py  test_database.py  test_deeplink.py  test_exporter.py  test_formatter.py  test_fraud_detector.py  test_legacy.py  test_ml_recommender.py  test_notification_engine.py  test_platforms.py  test_price_monitor.py  test_rate_limiter.py  test_recommendation_engine.py  test_registry.py
